# HaskellCalculator

./: Calculator.cabal  LICENSE  README.md
app/: Main.hs
src/: Calculator.hs
