name:                Calculator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/LeanderK/Calculator#readme
license:             BSD3
license-file:        LICENSE
author:              Leander Kurscheidt
maintainer:          Leander.Kurscheidt@gmx.de
copyright:           Copyright: (c) 2016 Leander Kurscheidt
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Calculator
  build-depends:       base >= 4.7 && < 5, split, matrix, vector, math-functions
  default-language:    Haskell2010

executable Calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Calculator
  default-language:    Haskell2010

test-suite Calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LeanderK/Calculator
